--- a/common.props
+++ b/common.props
@@ -2,6 +2,9 @@
 <Project>
 	<PropertyGroup>
 		<Version>1.0.0</Version>
+		<LangVersion>latest</LangVersion>
+	</PropertyGroup>
+	<PropertyGroup>
 		<NoWarn>$(NoWarn);CS1591</NoWarn>
 		<PackageLicenseExpression>GNU General Public License v3.0</PackageLicenseExpression>
 		<PackageLicenseUrl>https://github.com/mustafagenc/multisms/blob/main/LICENSE</PackageLicenseUrl>
