--- a/src/Providers/MultiSms.NetGsm.Provider/MultiSms.NetGsm.Provider.csproj
+++ b/src/Providers/MultiSms.NetGsm.Provider/MultiSms.NetGsm.Provider.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<UserSecretsId>bdb5a2b4-b1ea-4a9c-97cb-203fa78e9819</UserSecretsId>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Remove="Options\" />
@@ -16,5 +17,9 @@
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\..\MultiSms\MultiSms.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 </Project>
