--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,5 +32,5 @@ jobs:
 
     - name: Push to GitHub Registry
       run: |
-        nuget setapikey ${NUGET_AUTH_TOKEN} -Source https://nuget.pkg.github.com/mustafagenc/index.json
+        nuget setapikey ${{ secrets.GITHUB_TOKEN }} -Source https://nuget.pkg.github.com/mustafagenc/index.json
         dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols true
