--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,5 +32,4 @@ jobs:
 
     - name: Push to GitHub Registry
       run: |
-        nuget setapikey ${{ secrets.GITHUB_TOKEN }} -Source https://nuget.pkg.github.com/mustafagenc/index.json
-        dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols true
+        dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols true --api-key {{ secrets.GITHUB_TOKEN }} --source https://nuget.pkg.github.com/mustafagenc/index.json
