--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
         dotnet-version: '7.0.x'
         source-url: https://nuget.pkg.github.com/mustafagenc/index.json
       env:
-        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_TOKEN }}
+        NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Restore
       run: dotnet restore
@@ -32,4 +32,4 @@ jobs:
 
     - name: Push to GitHub Registry
       run: |
-        dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols true --api-key {{ secrets.NUGET_TOKEN }} --source https://nuget.pkg.github.com/mustafagenc/index.json
+        dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols true --api-key {{ secrets.GITHUB_TOKEN }} --source https://nuget.pkg.github.com/mustafagenc/index.json
