--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: '7.0.x'
-        source-url: https://nuget.pkg.github.com/mustafagenc/index.json
+        source-url: https://api.nuget.org
       env:
         NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
         
