--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,10 +2,10 @@ name: Publish
 
 on:
   push:
-    branches: [ release ]
+    branches: [ main ]
     
   pull_request:
-    branches: [ release ]
+    branches: [ main ]
 
 jobs:
   build:
