--- a/src/Providers/MultiSms.NetGsm.Provider/MultiSms.NetGsm.Provider.csproj
+++ b/src/Providers/MultiSms.NetGsm.Provider/MultiSms.NetGsm.Provider.csproj
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
+	<Import Project="..\..\..\common.props">
+	</Import>
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -16,10 +18,10 @@
 		<Folder Include="Extensions\" />
 	</ItemGroup>
 	<ItemGroup>
-	  <ProjectReference Include="..\..\MultiSms\MultiSms.csproj" />
+		<ProjectReference Include="..\..\MultiSms\MultiSms.csproj" />
 	</ItemGroup>
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
-	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="5.0.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 </Project>
