--- a/src/Providers/MultiSms.Twilio.Provider/MultiSms.Twilio.Provider.csproj
+++ b/src/Providers/MultiSms.Twilio.Provider/MultiSms.Twilio.Provider.csproj
@@ -1,22 +1,23 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
-  <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="Options\" />
-    <None Remove="Extensions\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Options\" />
-    <Folder Include="Extensions\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\MultiSms\MultiSms.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Twilio" Version="6.2.5" />
-  </ItemGroup>
+	<Import Project="..\..\..\common.props">
+	</Import>
+	<PropertyGroup>
+		<TargetFramework>net7.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+	</PropertyGroup>
+	<ItemGroup>
+		<None Remove="Options\" />
+		<None Remove="Extensions\" />
+	</ItemGroup>
+	<ItemGroup>
+		<Folder Include="Options\" />
+		<Folder Include="Extensions\" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\MultiSms\MultiSms.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Twilio" Version="6.2.5" />
+	</ItemGroup>
 </Project>
