--- a/src/MultiSms/MultiSms.csproj
+++ b/src/MultiSms/MultiSms.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<Import Project="..\..\common.props">
 	</Import>
@@ -27,5 +27,6 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+		<PackageReference Include="MultiSms" Version="1.0.1" />
 	</ItemGroup>
 </Project>
