--- a/tests/MultiSms.IletiMerkezi.Provider.Test/MultiSms.Provider.Test.csproj
+++ b/tests/MultiSms.IletiMerkezi.Provider.Test/MultiSms.Provider.Test.csproj
@@ -17,6 +17,7 @@
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
+		<PackageReference Include="Moq" Version="4.18.4" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\src\Providers\MultiSms.IletiMerkezi.Provider\MultiSms.IletiMerkezi.Provider.csproj" />
