--- a/sample/MultiSms.Mvc/Properties/launchSettings.json
+++ b/sample/MultiSms.Mvc/Properties/launchSettings.json
@@ -1,17 +1,19 @@
 {
+  "$schema": "https://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:56101",
-      "sslPort": 44360
+      "applicationUrl": "http://localhost:8484",
+      "sslPort": 44380
     }
   },
   "profiles": {
     "http": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5028",
+      "launchUrl": "netgsm",
+      "applicationUrl": "http://localhost:5023",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -20,7 +22,8 @@
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7223;http://localhost:5028",
+      "launchUrl": "netgsm",
+      "applicationUrl": "https://localhost:7212;http://localhost:5023",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -29,6 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "netgsm",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
