IletiMerkezi provider updated

--- a/src/Providers/MultiSms.IletiMerkezi.Provider/MultiSms.IletiMerkezi.Provider.csproj
+++ b/src/Providers/MultiSms.IletiMerkezi.Provider/MultiSms.IletiMerkezi.Provider.csproj
@@ -19,4 +19,7 @@
 	<ItemGroup>
 		<ProjectReference Include="..\..\MultiSms\MultiSms.csproj" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	</ItemGroup>
 </Project>
