--- a/sample/MultiSms.Mvc/appsettings.json
+++ b/sample/MultiSms.Mvc/appsettings.json
@@ -7,13 +7,18 @@
     },
     "AllowedHosts": "*",
     "MultiSms": {
-        "DefaultProvider": "NetGsm",
+        "DefaultProvider": "IletiMerkezi",
         "DefaultOrginator": "05355555555",
         "Twilio": {
             "Username": "test_username",
             "Password": "test_password"
         },
         "NetGsm": {
+            "Orginator": "test_orginator",
+            "Username": "test_username",
+            "Password": "test_password"
+        },
+        "IletiMerkezi": {
             "Orginator": "test_orginator",
             "Username": "test_username",
             "Password": "test_password"
