--- a/common.props
+++ b/common.props
@@ -9,7 +9,7 @@
 		<ProductName>Multi SMS</ProductName>
 		<Copyright>Copyright © 2023</Copyright>
 		<MaintainerEmail>eposta@mustafagenc.info</MaintainerEmail>
-		<PackageTags>sms, sms provider, netgsm</PackageTags>
+		<PackageTags>sms,sms provider,sms-gateway,netgsm,iletimerkezi,twillo,smsvitrini,mutlucell,masgsm,jetsms</PackageTags>
 		<PackageProjectUrl>https://github.com/mustafagenc/multisms</PackageProjectUrl>
 		<PackageReleaseNotes>https://github.com/mustafagenc/multisms/releases</PackageReleaseNotes>
 	</PropertyGroup>
