--- a/src/MultiSms/MultiSms.csproj
+++ b/src/MultiSms/MultiSms.csproj
@@ -27,5 +27,6 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+		<None Include="..\..\README.md" Pack="true" PackagePath="\"/>
 	</ItemGroup>
 </Project>
