--- a/src/Providers/MultiSms.SmsVitrini.Provider/MultiSms.SmsVitrini.Provider.csproj
+++ b/src/Providers/MultiSms.SmsVitrini.Provider/MultiSms.SmsVitrini.Provider.csproj
@@ -6,4 +6,8 @@
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\MultiSms\MultiSms.csproj" />
+		<None Include="README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
 </Project>
