--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,37 +1,43 @@
 name: Publish
 
 on:
-  push:
-    branches: [ main ]
-    
-  pull_request:
-    branches: [ main ]
+    push:
+        branches: [main]
+
+    pull_request:
+        branches: [main]
 
 jobs:
-  build:
+    build:
+        runs-on: ubuntu-latest
 
-    runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v3
+            - name: Setup .NET Core
+              uses: actions/setup-dotnet@v3
+              with:
+                  dotnet-version: '7.0.x'
+                  source-url: https://nuget.pkg.github.com/mustafagenc/index.json
+              env:
+                  NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '7.0.x'
-        source-url: https://nuget.pkg.github.com/mustafagenc/index.json
-      env:
-        NUGET_AUTH_TOKEN: ${{ secrets.NUGET_API_KEY }}
-        
-    - name: Restore
-      run: dotnet restore
+            - name: Restore
+              run: dotnet restore
 
-    - name: Build
-      run: dotnet build --configuration Release --no-restore
+            - name: Build
+              run: dotnet build --configuration Release --no-restore
 
-    - name: Pack
-      run: dotnet pack -c Release -o out
+            - name: Pack
+              run: dotnet pack -c Release -o out
 
-    - name: Push
-      run: |
-        dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols --api-key ${{ secrets.GITHUB_TOKEN }} --source https://nuget.pkg.github.com/mustafagenc/index.json
-        dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols --api-key ${{ secrets.NUGET_TOKEN }} --source https://nuget.org/api/v2/package
+            - name: Push
+              run: |
+                  dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols --api-key ${{ secrets.GITHUB_TOKEN }} --source https://nuget.pkg.github.com/mustafagenc/index.json
+                  dotnet nuget push ./out/*.nupkg --skip-duplicate --no-symbols --api-key ${{ secrets.NUGET_TOKEN }} --source https://nuget.org/api/v2/package
+
+            - name: Upload Assets to Release
+              run: |
+                  chmod +x ./publish.sh
+                  ./publish.sh ${{ github.event.release.tag_name }}
+              env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
