JetSms provider updated

--- a/sample/MultiSms.Mvc/appsettings.json
+++ b/sample/MultiSms.Mvc/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "MultiSms": {
-        "DefaultProvider": "IletiMerkezi",
+        "DefaultProvider": "JetSms",
         "DefaultOrginator": "05355555555",
         "Twilio": {
             "Username": "test_username",
@@ -19,6 +19,11 @@
             "Password": "test_password"
         },
         "IletiMerkezi": {
+            "Orginator": "test_orginator",
+            "Username": "test_username",
+            "Password": "test_password"
+        },
+        "JetSms": {
             "Orginator": "test_orginator",
             "Username": "test_username",
             "Password": "test_password"
