--- a/src/Providers/MultiSms.JetSms.Provider/MultiSms.JetSms.Provider.csproj
+++ b/src/Providers/MultiSms.JetSms.Provider/MultiSms.JetSms.Provider.csproj
@@ -5,9 +5,25 @@
 	<PropertyGroup>
 		<TargetFramework>net7.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<UserSecretsId>0507308b-e606-486d-8fe6-ebd2e5366417</UserSecretsId>
 	</PropertyGroup>
+	<ItemGroup>
+	  <None Remove="Extensions\" />
+	  <None Remove="Models\" />
+	  <None Remove="Options\" />
+	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\MultiSms\MultiSms.csproj" />
 		<None Include="README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Extensions\" />
+	  <Folder Include="Models\" />
+	  <Folder Include="Models\" />
+	  <Folder Include="Options\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 	</ItemGroup>
 </Project>
