MasGsm provider updated

--- a/sample/MultiSms.Mvc/appsettings.json
+++ b/sample/MultiSms.Mvc/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "MultiSms": {
-        "DefaultProvider": "JetSms",
+        "DefaultProvider": "MasGsm",
         "DefaultOrginator": "05355555555",
         "Twilio": {
             "Username": "test_username",
@@ -24,6 +24,11 @@
             "Password": "test_password"
         },
         "JetSms": {
+            "Orginator": "test_orginator",
+            "Username": "test_username",
+            "Password": "test_password"
+        },
+        "MasGsm": {
             "Orginator": "test_orginator",
             "Username": "test_username",
             "Password": "test_password"
