--- a/sample/MultiSms.Mvc/Properties/launchSettings.json
+++ b/sample/MultiSms.Mvc/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "http": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "jetsms",
+      "launchUrl": "MasGsm",
       "applicationUrl": "http://localhost:5023",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -22,7 +22,7 @@
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "jetsms",
+      "launchUrl": "MasGsm",
       "applicationUrl": "https://localhost:7212;http://localhost:5023",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -32,7 +32,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "jetsms",
+      "launchUrl": "MasGsm",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
