--- a/src/Providers/MultiSms.MasGsm.Provider/MultiSms.MasGsm.Provider.csproj
+++ b/src/Providers/MultiSms.MasGsm.Provider/MultiSms.MasGsm.Provider.csproj
@@ -7,7 +7,21 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 	<ItemGroup>
+	  <None Remove="Extensions\" />
+	  <None Remove="Models\" />
+	  <None Remove="Options\" />
+	</ItemGroup>
+	<ItemGroup>
 		<ProjectReference Include="..\..\MultiSms\MultiSms.csproj" />
 		<None Include="README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Extensions\" />
+	  <Folder Include="Models\" />
+	  <Folder Include="Options\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	  <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 	</ItemGroup>
 </Project>
