--- a/src/Providers/MultiSms.SmsVitrini.Provider/MultiSms.SmsVitrini.Provider.csproj
+++ b/src/Providers/MultiSms.SmsVitrini.Provider/MultiSms.SmsVitrini.Provider.csproj
@@ -7,7 +7,17 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 	</PropertyGroup>
 	<ItemGroup>
+	  <None Remove="Extensions\" />
+	  <None Remove="Models\" />
+	  <None Remove="Options\" />
+	</ItemGroup>
+	<ItemGroup>
 		<ProjectReference Include="..\..\MultiSms\MultiSms.csproj" />
 		<None Include="README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Extensions\" />
+	  <Folder Include="Models\" />
+	  <Folder Include="Options\" />
 	</ItemGroup>
 </Project>
