Mutlucell provider updated

--- a/sample/MultiSms.Mvc/appsettings.json
+++ b/sample/MultiSms.Mvc/appsettings.json
@@ -1,37 +1,42 @@
 ﻿{
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "MultiSms": {
-        "DefaultProvider": "MasGsm",
-        "DefaultOrginator": "05355555555",
-        "Twilio": {
-            "Username": "test_username",
-            "Password": "test_password"
-        },
-        "NetGsm": {
-            "Orginator": "test_orginator",
-            "Username": "test_username",
-            "Password": "test_password"
-        },
-        "IletiMerkezi": {
-            "Orginator": "test_orginator",
-            "Username": "test_username",
-            "Password": "test_password"
-        },
-        "JetSms": {
-            "Orginator": "test_orginator",
-            "Username": "test_username",
-            "Password": "test_password"
-        },
-        "MasGsm": {
-            "Orginator": "test_orginator",
-            "Username": "test_username",
-            "Password": "test_password"
-        }
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "MultiSms": {
+    "DefaultProvider": "Mutlucell",
+    "DefaultOrginator": "05355555555",
+    "Twilio": {
+      "Username": "test_username",
+      "Password": "test_password"
+    },
+    "NetGsm": {
+      "Orginator": "test_orginator",
+      "Username": "test_username",
+      "Password": "test_password"
+    },
+    "IletiMerkezi": {
+      "Orginator": "test_orginator",
+      "Username": "test_username",
+      "Password": "test_password"
+    },
+    "JetSms": {
+      "Orginator": "test_orginator",
+      "Username": "test_username",
+      "Password": "test_password"
+    },
+    "MasGsm": {
+      "Orginator": "test_orginator",
+      "Username": "test_username",
+      "Password": "test_password"
+    },
+    "Mutlucell": {
+      "Orginator": "test_orginator",
+      "Username": "test_username",
+      "Password": "test_password"
+    }
+  }
 }
