--- a/src/Providers/MultiSms.Mutlucell.Provider/MultiSms.Mutlucell.Provider.csproj
+++ b/src/Providers/MultiSms.Mutlucell.Provider/MultiSms.Mutlucell.Provider.csproj
@@ -10,4 +10,7 @@
 		<ProjectReference Include="..\..\MultiSms\MultiSms.csproj" />
 		<None Include="README.md" Pack="true" PackagePath="\" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+	</ItemGroup>
 </Project>
