--- a/src/Providers/MultiSms.NetGsm.Provider/MultiSms.NetGsm.Provider.csproj
+++ b/src/Providers/MultiSms.NetGsm.Provider/MultiSms.NetGsm.Provider.csproj
@@ -24,4 +24,7 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+	</ItemGroup>
 </Project>
