--- a/src/Providers/MultiSms.Mutlucell.Provider/MultiSms.Mutlucell.Provider.csproj
+++ b/src/Providers/MultiSms.Mutlucell.Provider/MultiSms.Mutlucell.Provider.csproj
@@ -13,4 +13,7 @@
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+	</ItemGroup>
 </Project>
