--- a/src/Providers/MultiSms.SmsVitrini.Provider/MultiSms.SmsVitrini.Provider.csproj
+++ b/src/Providers/MultiSms.SmsVitrini.Provider/MultiSms.SmsVitrini.Provider.csproj
@@ -20,4 +20,7 @@
 	  <Folder Include="Models\" />
 	  <Folder Include="Options\" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+	</ItemGroup>
 </Project>
