--- a/src/Providers/MultiSms.Twilio.Provider/MultiSms.Twilio.Provider.csproj
+++ b/src/Providers/MultiSms.Twilio.Provider/MultiSms.Twilio.Provider.csproj
@@ -21,4 +21,7 @@
 	<ItemGroup>
 		<PackageReference Include="Twilio" Version="6.2.5" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
+	</ItemGroup>
 </Project>
