--- a/src/Providers/MultiSms.SmsVitrini.Provider/MultiSms.SmsVitrini.Provider.csproj
+++ b/src/Providers/MultiSms.SmsVitrini.Provider/MultiSms.SmsVitrini.Provider.csproj
@@ -21,6 +21,9 @@
 	  <Folder Include="Options\" />
 	</ItemGroup>
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+	</ItemGroup>
+	<ItemGroup>
 	  <PackageReference Update="Microsoft.SourceLink.GitHub" Version="1.1.1" />
 	</ItemGroup>
 </Project>
