Refactor configuration keys and update SMS providers in MultiSms.Mvc

--- a/sample/MultiSms.Mvc/appsettings.json
+++ b/sample/MultiSms.Mvc/appsettings.json
@@ -20,8 +20,8 @@
     },
     "IletiMerkezi": {
       "Orginator": "test_orginator",
-      "Username": "test_username",
-      "Password": "test_password"
+      "Key": "test_key",
+      "Hash": "test_hash"
     },
     "JetSms": {
       "Orginator": "test_orginator",
